--- a/book/u2c.html
+++ b/book/u2c.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>B - Intro to Blender II</title>
+        <title>Workspace Setup - Intro to Blender II</title>
 
 
         <!-- Custom HTML head -->
@@ -152,7 +152,67 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="a"><a class="header" href="#a">A</a></h1>
+                        <h2 id="setting-up-our-workspace-for-texturing"><a class="header" href="#setting-up-our-workspace-for-texturing">Setting up Our Workspace for Texturing</a></h2>
+<ol>
+<li>
+<p><strong>Window Splits</strong></p>
+<ul>
+<li><strong>Shortcut Method:</strong>
+<ul>
+<li>Hover near a window boundary until a double arrow appears, then <kbd>Right-Click</kbd> → <code>Split Area</code> or drag from a corner to split.</li>
+</ul>
+</li>
+<li><strong>GUI Method:</strong>
+<ul>
+<li>Move the mouse to the top-right corner of any editor, click and drag to split or merge.</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>
+<p><strong>Changing Workspaces</strong></p>
+<ul>
+<li><strong>Shortcut Method:</strong>
+<ul>
+<li>Use <kbd>F3</kbd> and type <code>New Workspace</code> or click the <code>+</code> tab at the top to add a new workspace (e.g., <code>Shading</code>).</li>
+</ul>
+</li>
+<li><strong>GUI Method:</strong>
+<ul>
+<li>Go to <code>Window &gt; New Workspace</code> or click the <code>+</code> button in the workspace tabs and pick a workspace template (e.g., <code>Shading</code>, <code>Compositing</code>, etc.).</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>
+<p><strong>Downloading Resource Files</strong></p>
+<ul>
+<li>No direct Blender shortcut.</li>
+<li>Use your web browser or file explorer to download needed resources.</li>
+<li><strong>GUI Note:</strong>
+<ul>
+<li>In Blender, you can open <code>File &gt; External Data &gt; Find Missing Files</code> if you need to relocate downloaded textures.</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>
+<p><strong>Creating Blank Textures</strong></p>
+<ul>
+<li><strong>Shortcut Method (Shader Editor):</strong>
+<ul>
+<li>Switch to <code>Shader Editor</code> (<kbd>F3</kbd> and type <code>Shader Editor</code> or use the workspace tab).</li>
+<li>Press <kbd>Shift+A</kbd> → <code>Texture &gt; Image Texture</code>, then click <code>New</code> to create a blank image.</li>
+</ul>
+</li>
+<li><strong>GUI Method:</strong>
+<ul>
+<li><code>Add &gt; Texture &gt; Image Texture</code> in the Shader Editor toolbar, then select <code>New</code> to define width/height/color.</li>
+</ul>
+</li>
+</ul>
+</li>
+</ol>
 
                     </main>
 
