--- a/book/u2d.html
+++ b/book/u2d.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>C - Intro to Blender II</title>
+        <title>Wax Texture Nodes - Intro to Blender II</title>
 
 
         <!-- Custom HTML head -->
@@ -152,7 +152,73 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="b"><a class="header" href="#b">B</a></h1>
+                        <h2 id="building-our-first-procedural-texture"><a class="header" href="#building-our-first-procedural-texture">Building Our First Procedural Texture</a></h2>
+<p>We’ll create a procedural texture for the red dipped wax.</p>
+<p><img src="img/WaxTextureNodes.png" alt="Wax Texture Nodes" title="Wax Texture Nodes" /></p>
+<h2 id="-download-blender-logo"><a class="header" href="#-download-blender-logo"><a href="dl/WineBottle/BlenderLogo.png">📁 Download Blender Logo</a></a></h2>
+<hr />
+<ol>
+<li>
+<p><strong>Accessing the Shader Editor</strong></p>
+<ul>
+<li><strong>Shortcut Method:</strong>
+<ul>
+<li>Press <kbd>F3</kbd>, type <code>Shader Editor</code>, then press <kbd>Enter</kbd>.</li>
+</ul>
+</li>
+<li><strong>GUI Method:</strong>
+<ul>
+<li>Change the editor type in any window corner to <code>Shader Editor</code>.</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>
+<p><strong>Adding Nodes</strong></p>
+<ul>
+<li><strong>Shortcut Method:</strong>
+<ul>
+<li><kbd>Shift+A</kbd> → <code>Shader &gt; Principled BSDF</code>, or <code>Texture &gt; Noise Texture</code>, etc.</li>
+</ul>
+</li>
+<li><strong>GUI Method:</strong>
+<ul>
+<li>In the Shader Editor header, click <code>Add &gt; Shader</code>, <code>Add &gt; Texture</code>, and so on.</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>
+<p><strong>Connecting Nodes</strong></p>
+<ul>
+<li><strong>Shortcut Method:</strong>
+<ul>
+<li><kbd>Left-Click + Drag</kbd> from output sockets to input sockets.</li>
+</ul>
+</li>
+<li><strong>GUI Method:</strong>
+<ul>
+<li>Same method using standard click and drag in the Shader Editor.</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>
+<p><strong>Real-Time Preview</strong></p>
+<ul>
+<li><strong>Shortcut Method:</strong>
+<ul>
+<li>Make sure you’re in <code>Material Preview</code> or <code>Rendered</code> mode by pressing <kbd>Z</kbd> in the 3D viewport and choosing <code>Material Preview</code> or <code>Rendered</code>.</li>
+</ul>
+</li>
+<li><strong>GUI Method:</strong>
+<ul>
+<li>In the 3D viewport header, select <code>Viewport Shading &gt; Material Preview</code> or <code>Rendered</code>.</li>
+</ul>
+</li>
+</ul>
+</li>
+</ol>
 
                     </main>
 
