--- a/book/u2i.html
+++ b/book/u2i.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Procedural vs. Image Map - Intro to Blender II</title>
+        <title>Rendering - Intro to Blender II</title>
 
 
         <!-- Custom HTML head -->
@@ -152,33 +152,49 @@
 
                 <div id="content" class="content">
                     <main>
-                        <p>We will create, customize, and apply procedural textures, then compare them to mapped (image-based) textures. Afterward, we’ll set up our scene and produce a final render.</p>
-<hr />
-<h2 id="comparing-procedural-and-mapped-textures"><a class="header" href="#comparing-procedural-and-mapped-textures">Comparing Procedural and Mapped Textures</a></h2>
-<h3 id="procedurally-generated-textures"><a class="header" href="#procedurally-generated-textures">Procedurally Generated Textures</a></h3>
+                        <h2 id="setting-up-our-camera-15-minutes"><a class="header" href="#setting-up-our-camera-15-minutes">Setting up Our Camera (15 minutes)</a></h2>
+<ol>
+<li>
+<p><strong>Aligning Camera to View</strong></p>
 <ul>
-<li>Instant tweaks</li>
-<li>Can be animated</li>
-<li>Generally take up less space</li>
-<li>Can be tedious</li>
-</ul>
-<h3 id="mapped-textures-uv-or-projected"><a class="header" href="#mapped-textures-uv-or-projected">Mapped Textures (UV or Projected)</a></h3>
+<li><strong>Shortcut Method:</strong>
 <ul>
-<li>Render efficiently</li>
-<li>Transport between applications</li>
-<li>Offer more control</li>
-<li>More widely used</li>
+<li>Press <kbd>Numpad 0</kbd> to see through the camera. Adjust your viewport, then press <kbd>Ctrl+Alt+Numpad 0</kbd> to align the camera to the current view.</li>
 </ul>
+</li>
+<li><strong>GUI Method:</strong>
+<ul>
+<li><code>View &gt; Align View &gt; Align Active Camera to View</code>.</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>
+<p><strong>Moving the Camera</strong></p>
+<ul>
+<li><strong>Shortcut Method:</strong>
+<ul>
+<li>Press <kbd>G</kbd> while in camera view, then <kbd>Middle Mouse Button</kbd> or <kbd>R</kbd> to rotate.</li>
+</ul>
+</li>
+<li><strong>GUI Method:</strong>
+<ul>
+<li><code>Object &gt; Transform &gt; Move</code> or <code>Rotate</code> (ensure camera is selected).</li>
+</ul>
+</li>
+</ul>
+</li>
+</ol>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="u2a.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="u2h.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="u2c.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="u2g.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -188,11 +204,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="u2a.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="u2h.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="u2c.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="u2g.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
