--- a/book/u2f.html
+++ b/book/u2f.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>BE - Intro to Blender II</title>
+        <title>Creating our Glass Material - Intro to Blender II</title>
 
 
         <!-- Custom HTML head -->
@@ -152,7 +152,41 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="bd"><a class="header" href="#bd">BD</a></h1>
+                        <h2 id="building-our-third-procedural-texture"><a class="header" href="#building-our-third-procedural-texture">Building Our Third Procedural Texture</a></h2>
+<p>We’ll create a glass-like procedural material.</p>
+<p><img src="img/GlassTextureNodes.png" alt="Glass Texture Nodes" title="Glass Texture Nodes" /></p>
+<ol>
+<li>
+<p><strong>Adding a Glass Shader</strong></p>
+<ul>
+<li><strong>Shortcut Method:</strong>
+<ul>
+<li><kbd>Shift+A</kbd> → <code>Shader &gt; Glass BSDF</code>.</li>
+</ul>
+</li>
+<li><strong>GUI Method:</strong>
+<ul>
+<li><code>Add &gt; Shader &gt; Glass BSDF</code>.</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>
+<p><strong>Adjusting IOR, Roughness</strong></p>
+<ul>
+<li><strong>Shortcut Method:</strong>
+<ul>
+<li><kbd>Left-Click</kbd> on the value fields and type numeric values; or <kbd>Tab</kbd> between fields to edit.</li>
+</ul>
+</li>
+<li><strong>GUI Method:</strong>
+<ul>
+<li>Click inside the IOR or Roughness fields in the node properties and move the mouse or type a value.</li>
+</ul>
+</li>
+</ul>
+</li>
+</ol>
 
                     </main>
 
