--- a/book/u2h.html
+++ b/book/u2h.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Procedural vs. Image Map - Intro to Blender II</title>
+        <title>Scene Setup - Intro to Blender II</title>
 
 
         <!-- Custom HTML head -->
@@ -152,33 +152,38 @@
 
                 <div id="content" class="content">
                     <main>
-                        <p>We will create, customize, and apply procedural textures, then compare them to mapped (image-based) textures. Afterward, we’ll set up our scene and produce a final render.</p>
+                        <h2 id="building-our-fifth-and-final-procedural-texture"><a class="header" href="#building-our-fifth-and-final-procedural-texture">Building Our Fifth and Final Procedural Texture</a></h2>
+<p><img src="img/Cork.png" alt="Label Texture Nodes" title="Cork" />
+<img src="img/CorkNodes.png" alt="Label Texture Nodes" title="Full Cork Texture Setup" />
+<img src="img/CorkNodesClose1.png" alt="Label Texture Nodes" title="Closeup 1" />
+<img src="img/CorkNodesClose2.png" alt="Label Texture Nodes" title="Closeup 2" />
+<img src="img/CorkNodesClose3.png" alt="Label Texture Nodes" title="Closeup 3" />
+<img src="img/CorkNodesClose4.png" alt="Label Texture Nodes" title="Closeup 4" /></p>
 <hr />
-<h2 id="comparing-procedural-and-mapped-textures"><a class="header" href="#comparing-procedural-and-mapped-textures">Comparing Procedural and Mapped Textures</a></h2>
-<h3 id="procedurally-generated-textures"><a class="header" href="#procedurally-generated-textures">Procedurally Generated Textures</a></h3>
+<p>Follow the same pattern as above (add noise/textures/shaders). Experiment with combining multiple nodes.</p>
 <ul>
-<li>Instant tweaks</li>
-<li>Can be animated</li>
-<li>Generally take up less space</li>
-<li>Can be tedious</li>
+<li><strong>Shortcut Tips:</strong>
+<ul>
+<li><kbd>Shift+D</kbd> duplicates any selected node.</li>
+<li><kbd>Ctrl+Shift+Left-Click</kbd> (with Node Wrangler) previews outputs.</li>
 </ul>
-<h3 id="mapped-textures-uv-or-projected"><a class="header" href="#mapped-textures-uv-or-projected">Mapped Textures (UV or Projected)</a></h3>
+</li>
+<li><strong>GUI Method:</strong>
 <ul>
-<li>Render efficiently</li>
-<li>Transport between applications</li>
-<li>Offer more control</li>
-<li>More widely used</li>
+<li><code>Add &gt; ...</code> as needed, or <code>Right-Click &gt; Duplicate</code> on a node.</li>
+</ul>
+</li>
 </ul>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="u2a.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="u2g.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="u2c.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="u2i.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -188,11 +193,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="u2a.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="u2g.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="u2c.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="u2i.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
