--- a/book/u1f.html
+++ b/book/u1f.html
@@ -152,7 +152,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h2 id="creating-the-bottle-45-minutes"><a class="header" href="#creating-the-bottle-45-minutes">Creating The Bottle (45 minutes)</a></h2>
+                        <h2 id="creating-the-bottle"><a class="header" href="#creating-the-bottle">Creating The Bottle</a></h2>
 <h3 id="1-creating-a-cylinder"><a class="header" href="#1-creating-a-cylinder">1. <strong>Creating a Cylinder</strong></a></h3>
 <ul>
 <li><strong>Shortcut Method:</strong>
@@ -271,35 +271,40 @@
 </li>
 </ul>
 <h3 id="10-proportionally-editing-the-bottom"><a class="header" href="#10-proportionally-editing-the-bottom">10. <strong>Proportionally Editing the Bottom</strong></a></h3>
-<pre><code>- **Shortcut Method:**  
-  - Press &lt;kbd&gt;O&lt;/kbd&gt; to enable Proportional Editing, then &lt;kbd&gt;G&lt;/kbd&gt; to move the bottom vertices. Mouse wheel adjusts radius.  
-- **GUI Method:**  
-  - Click the Proportional Editing icon in the 3D Viewport header, then move as desired.
-</code></pre>
+<ul>
+<li><strong>Shortcut Method:</strong><br />
+- Press <kbd>O</kbd> to enable Proportional Editing, then <kbd>G</kbd> to move the bottom vertices. Mouse wheel adjusts radius.</li>
+<li><strong>GUI Method:</strong><br />
+- Click the Proportional Editing icon in the 3D Viewport header, then move as desired.</li>
+</ul>
 <h3 id="11-filling-an-open-hole"><a class="header" href="#11-filling-an-open-hole">11. <strong>Filling an Open Hole</strong></a></h3>
-<pre><code>- **Shortcut Method:**  
-  - In `Edit Mode`, select the open edge loop, press &lt;kbd&gt;F&lt;/kbd&gt; to fill.  
-- **GUI Method:**  
-  - `Mesh &gt; Face &gt; Make Edge/Face`.
-</code></pre>
+<ul>
+<li><strong>Shortcut Method:</strong><br />
+- In <code>Edit Mode</code>, select the open edge loop, press <kbd>F</kbd> to fill.</li>
+<li><strong>GUI Method:</strong><br />
+- <code>Mesh &gt; Face &gt; Make Edge/Face</code>.</li>
+</ul>
 <h3 id="12-adding-and-adjusting-loop-cuts"><a class="header" href="#12-adding-and-adjusting-loop-cuts">12. <strong>Adding and Adjusting Loop-Cuts</strong></a></h3>
-<pre><code>- **Shortcut Method:**  
-  - &lt;kbd&gt;Ctrl+R&lt;/kbd&gt; to initiate a loop cut, then move/scroll to place it.  
-- **GUI Method:**  
-  - `Mesh &gt; Insert &gt; Edge Loop`.
-</code></pre>
+<ul>
+<li><strong>Shortcut Method:</strong><br />
+- <kbd>Ctrl+R</kbd> to initiate a loop cut, then move/scroll to place it.</li>
+<li><strong>GUI Method:</strong><br />
+- <code>Mesh &gt; Insert &gt; Edge Loop</code>.</li>
+</ul>
 <h3 id="13-applying-a-displacement-modifier"><a class="header" href="#13-applying-a-displacement-modifier">13. <strong>Applying a Displacement Modifier</strong></a></h3>
-<pre><code>- **Shortcut Method:**  
-  - Press &lt;kbd&gt;F3&lt;/kbd&gt; → `Add Displace Modifier`.  
-- **GUI Method:**  
-  - `Properties &gt; Modifiers &gt; Add Modifier &gt; Displace`. Adjust texture and strength.
-</code></pre>
+<ul>
+<li><strong>Shortcut Method:</strong><br />
+- Press <kbd>F3</kbd> → <code>Add Displace Modifier</code>.</li>
+<li><strong>GUI Method:</strong><br />
+- <code>Properties &gt; Modifiers &gt; Add Modifier &gt; Displace</code>. Adjust texture and strength.</li>
+</ul>
 <h3 id="14-using-a-texture-with-the-modifier"><a class="header" href="#14-using-a-texture-with-the-modifier">14. <strong>Using a Texture with the Modifier</strong></a></h3>
-<pre><code>- **Shortcut Method:**  
-  - From the Displace Modifier panel, press &lt;kbd&gt;New&lt;/kbd&gt; next to `Texture`, then &lt;kbd&gt;F3&lt;/kbd&gt; and type `Open Texture` if you have a file.  
-- **GUI Method:**  
-  - `Properties &gt; Modifiers &gt; Displace &gt; Texture &gt; New`. Then in the `Texture Properties` tab, choose `Image or Movie` and load your texture.
-</code></pre>
+<ul>
+<li><strong>Shortcut Method:</strong><br />
+- From the Displace Modifier panel, press <kbd>New</kbd> next to <code>Texture</code>, then <kbd>F3</kbd> and type <code>Open Texture</code> if you have a file.</li>
+<li><strong>GUI Method:</strong><br />
+- <code>Properties &gt; Modifiers &gt; Displace &gt; Texture &gt; New</code>. Then in the <code>Texture Properties</code> tab, choose <code>Image or Movie</code> and load your texture.</li>
+</ul>
 
                     </main>
 
