--- a/book/u1h.html
+++ b/book/u1h.html
@@ -152,7 +152,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h2 id="creating-the-cork-15-minutes"><a class="header" href="#creating-the-cork-15-minutes">Creating the Cork (15 minutes)</a></h2>
+                        <h2 id="creating-the-cork"><a class="header" href="#creating-the-cork">Creating the Cork</a></h2>
 <ol>
 <li>
 <p><strong>Extruding</strong></p>
@@ -189,7 +189,7 @@
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="u2a.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="u1i.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -203,7 +203,7 @@
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="u2a.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="u1i.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
