--- a/book/u1i.html
+++ b/book/u1i.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Session 1 - Intro to Blender II</title>
+        <title>Modelling the String - Intro to Blender II</title>
 
 
         <!-- Custom HTML head -->
@@ -152,19 +152,58 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h2 id="modeling-workshop-session"><a class="header" href="#modeling-workshop-session">Modeling Workshop Session</a></h2>
-<p>Today, we'll concentrate on creating more intricate forms by using techniques such as proportional editing for seamless feature transitions and applying modifiers for organic deformations. By the end of the session, we'll have our model ready to move on to the texturing phase. Ideally, our model will resemble something along these lines.</p>
-<p><img src="img/WineBottleWire.png" alt="Wireframe of Wine Bottle Model" title="Wireframe of Wine Bottle Model" /></p>
+                        <h2 id="creating-our-string"><a class="header" href="#creating-our-string">Creating our string</a></h2>
+<ol>
+<li>
+<p><strong>Adding Curve</strong></p>
+<ul>
+<li><strong>Shortcut Method:</strong>
+<ul>
+<li>In <code>Object Mode</code>, <kbd>Shift+A</kbd> curve &gt; nurbs curve.</li>
+</ul>
+</li>
+<li><strong>GUI Method:</strong>
+<ul>
+<li><code>add &gt; curve &gt; nurbs curve</code></li>
+</ul>
+</li>
+</ul>
+</li>
+<li>
+<p><strong>Adjusting Curve</strong></p>
+<ul>
+<li><strong>Shortcut Method:</strong>
+<ul>
+<li>In <code>Edit Mode</code>, <kbd>1</kbd></li>
+<li>Select and <kbd>g</kbd> to grab and move points</li>
+<li>extrude with <kbd>e</kbd></li>
+</ul>
+</li>
+</ul>
+</li>
+<li>
+<p><strong>Thickenning the curve</strong></p>
+<ul>
+<li><strong>Shortcut Method:</strong>
+<ul>
+<li>In <code>data</code> tab of the info panel</li>
+<li>We click a dropdown for <code>geometry</code></li>
+<li>We adjust the <code>depth</code> slider</li>
+</ul>
+</li>
+</ul>
+</li>
+</ol>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="u1a.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="u1h.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="u1c.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="u1j.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -174,11 +213,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="u1a.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="u1h.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="u1c.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="u1j.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
