--- a/book/u1j.html
+++ b/book/u1j.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Session 1 - Intro to Blender II</title>
+        <title>Wax Dip - Intro to Blender II</title>
 
 
         <!-- Custom HTML head -->
@@ -152,19 +152,67 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h2 id="modeling-workshop-session"><a class="header" href="#modeling-workshop-session">Modeling Workshop Session</a></h2>
-<p>Today, we'll concentrate on creating more intricate forms by using techniques such as proportional editing for seamless feature transitions and applying modifiers for organic deformations. By the end of the session, we'll have our model ready to move on to the texturing phase. Ideally, our model will resemble something along these lines.</p>
-<p><img src="img/WineBottleWire.png" alt="Wireframe of Wine Bottle Model" title="Wireframe of Wine Bottle Model" /></p>
+                        <h2 id="creating-the-wax-dipped-top"><a class="header" href="#creating-the-wax-dipped-top">Creating the Wax Dipped Top</a></h2>
+<ol>
+<li>
+<p><strong>Selecting faces to extract</strong></p>
+<ul>
+<li><strong>Shortcut Method:</strong>
+<ul>
+<li>In <code>Edit Mode</code>, with face select on <kbd>3</kbd>.</li>
+<li>Chain select faces</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>
+<p><strong>Duplicating faces</strong></p>
+<ul>
+<li><strong>Shortcut Method:</strong>
+<ul>
+<li>While still in <code>Edit Mode</code>, <kbd>Shift+D</kbd>, <kbd>Escape</kbd></li>
+<li>Select and <kbd>p</kbd> to bring up the seperate menu and choose <code>by selection</code></li>
+<li>hit <kbd>Tab</kbd> to switch to object mode</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>
+<p><strong>Selecting our newly seprated wax base</strong></p>
+<ul>
+<li><strong>Shortcut Method:</strong>
+<ul>
+<li>Simply select our new body</li>
+<li>hit <kbd>Tab</kbd> to enter <code>Edit Mode</code></li>
+</ul>
+</li>
+</ul>
+</li>
+<li>
+<p><strong>Operating on the mesh</strong></p>
+<ul>
+<li>Now <kbd>2</kdb> for edge select mode</li>
+<li>We are going to do some surgery by selecting edges and <kbd>f</kbd> filling them</li>
+<li>We will fill in the end of the cylinder with grid fill <code>face&gt;grid fill</code></li>
+</ul>
+</li>
+<li>
+<p>**Applying the Solidify Modifier</p>
+</li>
+<li>
+<p>**Applying the Sub-Division Surface Modifier</p>
+</li>
+</ol>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="u1a.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="u1i.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="u1c.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="u1k.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -174,11 +222,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="u1a.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="u1i.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="u1c.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="u1k.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
