--- a/book/u1k.html
+++ b/book/u1k.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Session 1 - Intro to Blender II</title>
+        <title>Wax Seal - Intro to Blender II</title>
 
 
         <!-- Custom HTML head -->
@@ -152,19 +152,73 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h2 id="modeling-workshop-session"><a class="header" href="#modeling-workshop-session">Modeling Workshop Session</a></h2>
-<p>Today, we'll concentrate on creating more intricate forms by using techniques such as proportional editing for seamless feature transitions and applying modifiers for organic deformations. By the end of the session, we'll have our model ready to move on to the texturing phase. Ideally, our model will resemble something along these lines.</p>
-<p><img src="img/WineBottleWire.png" alt="Wireframe of Wine Bottle Model" title="Wireframe of Wine Bottle Model" /></p>
+                        <h2 id="creating-our-wax-seal"><a class="header" href="#creating-our-wax-seal">Creating our Wax Seal</a></h2>
+<p>Despite the seal being relatively simple looking, we are going to model it in a particular way in order to modifiers to apply correctly and later textures in our next session.</p>
+<ol>
+<li>
+<p><strong>Adding a circle</strong></p>
+<ul>
+<li><strong>Shortcut Method:</strong>
+<ul>
+<li>In <code>Object Mode</code>, with face select on <kbd>Shift+A</kbd>.</li>
+<li>Position into place with <kbd>g</kbd> and locking to axis <kbd> x, y or z </kbd></li>
+</ul>
+</li>
+</ul>
+</li>
+<li>
+<p><strong>Extrude, Exit, Scale Move</strong></p>
+<ul>
+<li><strong>Shortcut Method:</strong>
+<ul>
+<li>In <code>Edit Mode</code>, with all edges selected <kbd>2</kbd> for edge select.</li>
+<li>We do a combo move <kdb>e, esc, s<kbd> the <code>extrude</code> creates a new edge, <code>escape</code> cancels the extrusion operation, <code>s</code> scales the newly created edge.</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>
+<p><strong>Grid filling the centre</strong></p>
+<ul>
+<li><strong>Shortcut Method:</strong>
+<ul>
+<li>In <code>Face</code> menu, we will <code>grid fill</code> the centre.</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>
+<p><strong>Applying the Shrink Wrap Modifier</strong></p>
+<ul>
+<li><strong>Shortcut Method:</strong>
+<ul>
+<li>In <code>Object Mode</code>, we navigate to the <code>modifiers</code> tab and add a new <code>deformation</code> modifier called <code>shrinkwrap</code> with the target being our bottle.</li>
+<li>We will then apply the modifier permanently.</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>
+<p><strong>Extruding</strong></p>
+<ul>
+<li><strong>Shortcut Method:</strong>
+<ul>
+<li>In <code>Edit Mode</code>, with all faces selected we <kbd>e</kbd>extrude.</li>
+</ul>
+</li>
+</ul>
+</li>
+</ol>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="u1a.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="u1j.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="u1c.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="u2a.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -174,11 +228,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="u1a.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="u1j.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="u1c.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="u2a.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
