--- a/book/u1g.html
+++ b/book/u1g.html
@@ -152,7 +152,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h2 id="creating-a-label-ring-with-a-cylinder-10-minutes"><a class="header" href="#creating-a-label-ring-with-a-cylinder-10-minutes">Creating a Label Ring with a Cylinder (10 minutes)</a></h2>
+                        <h2 id="creating-a-label-ring-with-a-cylinder"><a class="header" href="#creating-a-label-ring-with-a-cylinder">Creating a Label Ring with a Cylinder</a></h2>
 <ol>
 <li>
 <p><strong>Adding a Cylinder</strong></p>
